--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Web Guapas</title>
 </head>
 <body>
-  <video src=Pacifier-clases (1).mp4"></video>
+    <h1>Bienvenidos a mi sitio WEB</h1>
 </body>
 </html>
