--- a/index.html
+++ b/index.html
@@ -5,8 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Guapas</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Bienvenidos a mi sitio WEB</h1>
+    <nav><h1>wwwapas</h1><ul><li><a href="#inicio">Inicio</a><a href="#servicios">Servicios</a><a href="#contacto">Contacto</a></li></nav><br>
+    <header><h1>Somos <span>wwwapas</span></h1>
+        <h2>Social media managers | creadoras de contenido</h2>
+        <p>Nos encargamos de construir, gestionar y administrar la comunidad 
+        online de tu marca, empresa o negocio <strong>¡Creamos relaciones estables y 
+        duraderas con tus clientes!</strong></p>
+    <img src="img/foto.png" alt="foto">
+    </header>
+        <main><section id="inicio">
+           <h2>¡Hola! Somos SOFI & JULIA,</h2>
+<p>las social media managers, las creadoras de contenido, las 
+copywriters, las generadoras de leads, las diseñadoras, las 
+estrategas en marketing digital, las potenciadoras de ventas, 
+el posicionamiento de tu marca <strong>¡Somos el complemento que necesitás para hacer crecer tu marca! ¡Somos wwwapas!</strong></p></section>
+<section><h2>GESTIONAMOS TUS REDES SOCIALES</h2>
+<p>La transformación digital no es solo para grandes compañías, 
+todas las empresas deben emprenderla cuanto antes y aquí 
+es donde podemos asistirte. Armamos estrategias a medida 
+para tu empresa, marca o producto <strong>¡Aumentá tu presencia 
+digital y generá nuevas ventas y contactos!</strong></p></section>
+<br><hr>
+<section id="servicios">
+    <img src="img/img-servicios.png" alt="servicios">
+<h1>Servicios</h1>
+<ol>
+<li>Análisis de perfil (Benchmarking)</li>
+<li>Revisión y activación de canales</li>
+<li>Gestión, creación y diseño de contenido</li>
+<li>Respuestas a mensajes y consultas</li>
+<li>Segmentación de promociones según el público objetivo de la pauta publicitaria</li>
+<li>Diagramamos un calendario que se ajuste a los objetivos de la empresa</li>
+<li>¡Empezamos a comunicar!</li>
+</ol></section>
+<br><hr>
+<section id="contacto">
+<h2>¿Querés que nos contactemos con vos?</h2>
+<h3>Envianos tu consulta >></h3>
+<form action="recepcion.php" method="post">
+    <label for="nombre">Nombre:<span>*</span></label><input id="nombre" type="text" name="nombre" placeholder="Nombre completo" minlength="6" required>
+    <label for="email">Email: <span>*</span></label><input id="correo" name="email" type="email" required placeholder="info@dominio.com" >
+    <label for="comentarios">Comentarios: <span>*</span></label><textarea name="comentarios" id="comentarios" cols="30" rows="10" required></textarea>
+    <br>
+    <div><input type="submit" value="Enviar consulta">
+    <input type="reset" value="Borrar">
+    </div>
+
+</form>
+</section> 
+<aside>
+    <h3>Nuestras redes:</h3>
+    <a href="http://www.instagram.com/"><img src="img/instagram-icon.png" alt="insta"></a><a href=""><img src="img/dribbble-icon.png" alt=""></a><a href=""><img src="img/linkedin-icon.png" alt=""></a><a href=""><img src="img/facebook-icon.png" alt=""></a></aside>
+<footer>
+    <h1>wwwwapas</h1><a href="mailto:mlaurizi922@gmail.com">wwapas_sm@mail.com</a>
+</footer>
+</main>
 </body>
 </html>
